[tool.poetry]
name = "spotspot"
version = "0.1.0"
description = "A terminal music player"
authors = ["bjornaer <maxemijo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
spotdl = "^4.2.11"
click = "^8.1.7"
pygame = "^2.5.2"
mutagen = "^1.47.0"

[tool.poetry.scripts]
spotspot = "spotspot.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
